Thu Apr  7 21:44:06 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* arraysort.awk, arraysort.ok: Added more test cases.

Fri Apr  1 11:56:54 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* arraysort.awk, arraysort.ok: New files from John Haque,
	edited somewhat.
	* Makefile.am (arraysort): New test.

Wed Mar 30 22:00:59 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* next.sh, exit.sh: New files from John Haque, edited somewhat.
	* Makefile.am (next, exit): New tests.

Mon Feb 21 20:32:36 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (GAWK_EXT_TESTS): Include profile3. Thanks to
	Scott Deifik for pointing out the omission.

Tue Feb 15 17:11:26 2011  Pat Rankin  <rankin@pactechdata.com>

	* sortfor.awk: New values for PROCINFO["sorted_in"].
	* sortfor.ok: Sync with updated sortfor.awk.

Wed Feb 16 21:09:50 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (lintwarn): New test.
	* lintwarn.awk, lintwarn.ok: New files from John Haque.
	* funsmnam.ok, noeffect.ok, paramdup.ok, paramres.ok: Adjust
	after fixes to lint warnings.

Mon Feb 14 21:31:10 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (profile2): Add -v sortcmd=sort to pgawk invocation.
	(profile1): Remove awkprof.out. Thanks to Pat Rankin for noticing.

Sun Feb 13 20:27:35 2011  Pat Rankin  <rankin@pactechdata.com>

	* xref.awk: Allow sortcmd to be preset via -v option.
	* profile2.ok: Sync with updated xref.awk.

Sun Feb 13 19:55:15 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (profile3): New test.
	* profile3.awk, profile3.ok: New files.

Fri Feb 11 10:29:48 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (manyfiles): Bump limit up above 1024, which is
	what most modern systems have for number of open file descriptors.

Tue Feb  8 22:49:17 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* aryprm4.ok, scalar.ok, sclforin.ok, sclifin.ok: Fixed to match
	output message changes.
