@@ -1,3 +1,8 @@
+Fri Apr 15 13:49:36 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* ofmta.awk, ofmta.ok: New files from John Haque.
+	* Makefile.am (ofmta): New test.
+
 Thu Apr  7 21:44:06 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* arraysort.awk, arraysort.ok: Added more test cases.
